--- a/index.html
+++ b/index.html
@@ -69,10 +69,8 @@
   </div>
   <br>
   <br>
-  <br>
-  <br>
 
-  <footer class="text-center page-footer">
+  <footer class="text-center footer">
    <center>
      <p>Made with ❤️ by <a href="http://hedayat-farahi.netlify.app">Hedayat</a></p>
    </center>
