--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </div>
     <div class="row mt-5 text-center">
       <div class="col-12">
-          <a href="tel:+4915166147636" class="btn btn-dark mt-2 mt-md-0 px-4 phone_btn" id="notifs-form-btn"> <i class="fas fa-phone phone_icon"></i>Call Us</a>
+          <a href="tel:+491xxxxxxxxxx" class="btn btn-dark mt-2 mt-md-0 px-4 phone_btn" id="notifs-form-btn"> <i class="fas fa-phone phone_icon"></i>Call Us</a>
       </div>
     </div>
   </div>
