remove the extra spacing

--- a/index.html
+++ b/index.html
@@ -34,9 +34,7 @@
 
 <body>
 
-  <br>
-  <br>
-  <div class="top container mt-5">
+  <div class="top container">
     <div class="row">
       <div class="col-12">
         <center>
