--- a/index.html
+++ b/index.html
@@ -48,22 +48,42 @@
     <div class="row">
       <div class="col-12 content">
         <center>
-          <h2 class="title">As-salamu alaykum 👋</h2>
+          <h1 class="title">As-salamu alaykum 👋</h1>
         </center>
       </div>
     </div>
     <div class="row mt-3">
       <div class="col-12 content">
         <center>
-          <h4>Coming soon! This website is not available at the moment.</h4>
+          <h3>Coming soon! This website is not available at the moment.</h4>
         </center>
       </div>
     </div>
+    
     <div class="row mt-5 text-center">
       <div class="col-12">
           <a href="tel:+4794112636" class="btn btn-dark mt-2 mt-md-0 px-4 phone_btn" id="notifs-form-btn"> <i class="fas fa-phone phone_icon"></i>Call Us</a>
       </div>
     </div>
+    <!-- <div class="row mt-5">
+      <div class="col-12">s
+        <center class="location"> 
+          <h5>
+          <i class="fa fa-map-marked-alt map_icon" aria-hidden="true"></i> 
+            
+            Glåmdal Islamic Culture Center, Gågata 15, 2211 Kongsving</h5>
+        </center>
+      </div>
+    </div> -->
+
+
+    <div class="alert alert-secondary d-flex align-items-center mt-5" role="alert">
+      <i class="fa fa-map-marked-alt map_icon" aria-hidden="true"></i> 
+      <div class="location_text">
+        Glåmdal Islamic Culture Center, Gågata 15, 2211 Kongsving
+      </div>
+    </div>
+
     <div class="google-maps">
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1983.6165053248967!2d12.000696615798182!3d60.18707964899489!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x464248f9aa2c0087%3A0x698819819dfd90d4!2sGl%C3%A5mdal%20Islamic%20Culture%20Center!5e0!3m2!1sen!2sde!4v1643756880659!5m2!1sen!2sde" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </div>
